--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -441,242 +441,15 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "type": "scatter",
-         "uid": "72aaa60c-e91b-11e8-9e82-0242ac110016",
-         "x": [
-          0
-         ],
-         "y": [
-          0
-         ]
-        },
-        {
-         "mode": "markers",
-         "type": "scatter",
-         "uid": "72aaa97c-e91b-11e8-9e82-0242ac110016",
-         "x": [
-          30,
-          40,
-          100
-         ],
-         "y": [
-          45,
-          60,
-          150
-         ]
-        }
-       ],
-       "frames": [
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.0085,
-            62.508499999999984
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.013457483333333336,
-            98.96697415
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.016348771640555558,
-            120.23160758664055
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.018034938763874835,
-            132.63433827691753
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.01901821141416974,
-            139.86830869337098
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.019591516465717437,
-            144.08756731113914
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.019925705352372706,
-            146.54847639291464
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.020120428242875608,
-            147.98381709628785
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.02023380672219544,
-            148.82098862041082
-           ]
-          }
-         ]
-        },
-        {
-         "data": [
-          {
-           "type": "scatter",
-           "x": [
-            0,
-            100
-           ],
-           "y": [
-            0.020299740568747532,
-            149.30927422474454
-           ]
-          }
-         ]
-        }
-       ],
-       "layout": {
-        "title": "Regression Line",
-        "updatemenus": [
-         {
-          "buttons": [
-           {
-            "args": [
-             null
-            ],
-            "label": "Play",
-            "method": "animate"
-           }
-          ],
-          "type": "buttons"
-         }
-        ],
-        "xaxis": {
-         "autorange": false,
-         "range": [
-          0,
-          110
-         ]
-        },
-        "yaxis": {
-         "autorange": false,
-         "range": [
-          0,
-          160
-         ]
-        }
-       }
-      },
-      "text/html": [
-       "<div id=\"47728277-dd8b-4897-b781-764e27b7385d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "        Plotly.plot(\n",
-       "            '47728277-dd8b-4897-b781-764e27b7385d',\n",
-       "            [{\"x\": [0], \"y\": [0], \"type\": \"scatter\", \"uid\": \"72eb44f0-e91b-11e8-9e82-0242ac110016\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"72eb4766-e91b-11e8-9e82-0242ac110016\"}],\n",
-       "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
-       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('47728277-dd8b-4897-b781-764e27b7385d',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('47728277-dd8b-4897-b781-764e27b7385d');})\n",
-       "        });</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"47728277-dd8b-4897-b781-764e27b7385d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "        Plotly.plot(\n",
-       "            '47728277-dd8b-4897-b781-764e27b7385d',\n",
-       "            [{\"x\": [0], \"y\": [0], \"type\": \"scatter\", \"uid\": \"72eb44f0-e91b-11e8-9e82-0242ac110016\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"72eb4766-e91b-11e8-9e82-0242ac110016\"}],\n",
-       "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
-       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('47728277-dd8b-4897-b781-764e27b7385d',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('47728277-dd8b-4897-b781-764e27b7385d');})\n",
-       "        });</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'shows' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-c0052a024a91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0minit_notebook_mode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconnected\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mx_values_of_shows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0my_values_of_shows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'y'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m figure = {'data': [{'x': [0], 'y': [0]}, {'x': x_values_of_shows, 'y': y_values_of_shows, 'mode': 'markers'}],\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'shows' is not defined"
+     ]
     }
    ],
    "source": [
