--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "{'b': 0.0085, 'm': 0.6249999999999999}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "{'b': 0.01345805, 'm': 0.9894768333333332}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        " {'b': 0.020299740568747532, 'm': 1.4928897448417577}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,19 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'iterations' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-d42bcd3225c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0minitial_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mending_x\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'y'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0minitial_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mending_y\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mframes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mto_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteration\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'm'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0miterations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mframes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'iterations' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'data': [{'x': [0, 100], 'y': [0.0085, 62.508499999999984]}]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -441,15 +440,242 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'shows' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c0052a024a91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0minit_notebook_mode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconnected\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mx_values_of_shows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0my_values_of_shows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'y'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m figure = {'data': [{'x': [0], 'y': [0]}, {'x': x_values_of_shows, 'y': y_values_of_shows, 'mode': 'markers'}],\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'shows' is not defined"
-     ]
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "d1557cb2-e9e4-11e8-aaa2-0242ac11001c",
+         "x": [
+          0
+         ],
+         "y": [
+          0
+         ]
+        },
+        {
+         "mode": "markers",
+         "type": "scatter",
+         "uid": "d155807c-e9e4-11e8-aaa2-0242ac11001c",
+         "x": [
+          30,
+          40,
+          100
+         ],
+         "y": [
+          45,
+          60,
+          150
+         ]
+        }
+       ],
+       "frames": [
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.0085,
+            62.508499999999984
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.013457483333333336,
+            98.96697415
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.016348771640555558,
+            120.23160758664055
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.018034938763874835,
+            132.63433827691753
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.01901821141416974,
+            139.86830869337098
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.019591516465717437,
+            144.08756731113914
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.019925705352372706,
+            146.54847639291464
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.020120428242875608,
+            147.98381709628785
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.02023380672219544,
+            148.82098862041082
+           ]
+          }
+         ]
+        },
+        {
+         "data": [
+          {
+           "type": "scatter",
+           "x": [
+            0,
+            100
+           ],
+           "y": [
+            0.020299740568747532,
+            149.30927422474454
+           ]
+          }
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Regression Line",
+        "updatemenus": [
+         {
+          "buttons": [
+           {
+            "args": [
+             null
+            ],
+            "label": "Play",
+            "method": "animate"
+           }
+          ],
+          "type": "buttons"
+         }
+        ],
+        "xaxis": {
+         "autorange": false,
+         "range": [
+          0,
+          110
+         ]
+        },
+        "yaxis": {
+         "autorange": false,
+         "range": [
+          0,
+          160
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"e703a70c-bd9a-4213-95a7-945831e05cea\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'e703a70c-bd9a-4213-95a7-945831e05cea',\n",
+       "            [{\"x\": [0], \"y\": [0], \"type\": \"scatter\", \"uid\": \"d1cd8e32-e9e4-11e8-aaa2-0242ac11001c\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"d1cd91ca-e9e4-11e8-aaa2-0242ac11001c\"}],\n",
+       "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('e703a70c-bd9a-4213-95a7-945831e05cea',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('e703a70c-bd9a-4213-95a7-945831e05cea');})\n",
+       "        });</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"e703a70c-bd9a-4213-95a7-945831e05cea\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'e703a70c-bd9a-4213-95a7-945831e05cea',\n",
+       "            [{\"x\": [0], \"y\": [0], \"type\": \"scatter\", \"uid\": \"d1cd8e32-e9e4-11e8-aaa2-0242ac11001c\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"d1cd91ca-e9e4-11e8-aaa2-0242ac11001c\"}],\n",
+       "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('e703a70c-bd9a-4213-95a7-945831e05cea',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('e703a70c-bd9a-4213-95a7-945831e05cea');})\n",
+       "        });</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
